--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,7 @@
 						</div>
 						<div class="col-lg-5">
 							<div class="contact-two mt-50 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.2s">
-								<img src="assets/images/simplx-building-transparent-2-sm2.png" alt="Logo" style="float: right;">
+								<img src="assets/images/simplx-building-midrise.png" alt="Logo" style="float: right;">
 							</div>
 						</div>
 					</div>
@@ -129,7 +129,7 @@
 			<div class="row justify-content-center"> 
 				<div class="col-lg-8 justify-content-center wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.2s">
 					<h2 class="title">Introduction</h2>
-					<p class="text">Simplx is a cloud-based structural engineering application for designing multi-storey buildings. Perform fast and easy design iterations through intelligent design and analysis automation, offering unparalleled modelling efficiency.<br><br>Work in the cloud, independently or collaboratively with project consultants and product designers.</p>
+					<p class="text">Simplx is a cloud-based software application for the structural design of buildings. With unparalleled modelling efficiency, you can perform fast and easy design iterations through intelligent design and analysis automation. Work independently or collaboratively with development teams and project consultants.</p>
 				</div>
 			</div>
 		</div>
@@ -147,7 +147,7 @@
 				<div class="col-lg-4 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.2s">
 					<h4 class="contact-title">Eliminate</h4>
 					<p class="text">
-						Eliminate redundant inputs by maximising reuse and test assumptions and scenarios without duplicating models.
+						Eliminate redundant inputs by maximising reuse. Test assumptions and scenarios without duplicating models.
 					</p>
 				</div>
 				<div class="col-lg-4 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.2s">
@@ -184,7 +184,7 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8 justify-content-center wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.2s">
 					<h3 class="title">Web Tools</h3>
-					<p class="text">The cloud-native Simplx application will bring flexible, high performance computing and data management to property design and development teams.<br><br>The clean and simple web user interface lets you build detailed 3D analysis models in minutes, not days. Built for scale, you can execute dozens of analyses in parallel, meaning you get results sooner without the headache of orchestrating and managing serial execution.<br><br>Our application programming interface (API) enables bolt-on advanced design and analysis capability to support your automation journey. Embed Simplx into your PropTech application to achieve design certainty sooner.
+					<p class="text">The cloud-native Simplx application brings flexible, high performance computing and data management to property design and development teams.<br><br>The clean and simple web user interface lets you build detailed 3D analysis models in minutes, not days. Built for scale, you can execute dozens of analyses in parallel, meaning you get results sooner without the headache of orchestrating and managing serial execution.<br><br>Our application programming interface (API) enables bolt-on advanced design and analysis capability to support your automation journey. Embed Simplx into your PropTech application to achieve design certainty sooner.
 					</p>
 				</div>
 			</div>
@@ -279,6 +279,7 @@
                             <div class="form-input rounded-buttons mt-20">
                                 <button type="submit" class="main-btn rounded-three">Submit</button>
                             </div> <!-- form input -->
+							<script src="submit-form.js" defer></script>
                         </form>
                     </div> <!-- contact form -->
                 </div>
