--- a/public/index.html
+++ b/public/index.html
@@ -233,7 +233,7 @@
 						</p>
                         <ul class="contact-info">
 							<p class="text"><br>You can reach us at:</p>
-                            <li><i class="lni-envelope"></i> admin@simplx.io</li>
+							<li><a href="mailto:admin@simplx.io">admin@simplx.io</a></li>
                         </ul>
 					</p>
                 </div>
